--- a/src/02-form.html
+++ b/src/02-form.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <title>Page 3</title>
   </head>
   <body>
     <section>
-      <a href="./index.html">Go to home</a>
+      <a href="index.html">Go to home</a>
     </section>
     <form class="feedback-form" autocomplete="off">
       <label>
@@ -22,6 +22,6 @@
       </label>
       <button type="submit">Submit</button>
     </form>
-    <script type="module" src="./js/02-form.js"></script>
+    <script type="module" src="/js/02-form.js"></script>
   </body>
 </html>
